<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Medication Wizard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">My Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Today\'s medications</string>
    <string name="menu_gallery">Medications list</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="history_title">Medication History</string>
    <string name="history_empty">No medications recorded for this day.</string>
    <string name="history_empty_subtitle">It looks like you didn\'t have any doses scheduled or recorded on this date.</string>
    <string name="settings_category_reminders">Reminders</string>
    <string name="settings_notifications_disabled_summary">Tap here to allow reminders and stay healthy.</string>
    <string name="settings_notifications_manage_prompt">To disable or manage your health alerts, please use the system settings.</string>
    <string name="settings_notifications_title">Health Alerts</string>
    <string name="settings_notifications_summary">Keep your reminders active so you never miss a dose. Stay healthy!</string>
    <string name="settings_quiet_hours_title">Quiet Hours</string>
    <string name="settings_quiet_hours_summary">Don\'t notify me while I\'m sleeping.</string>
    <string name="settings_quiet_hours_format">Don\'t notify me while I\'m sleeping (%1$s).</string>
    <string name="settings_snooze_duration_title">Snooze Duration</string>
    <string name="settings_snooze_duration_summary">Wait %1$d minutes before reminding me again.</string>
    <string name="settings_max_snoozes_title">Max Snoozes</string>
    <string name="settings_max_snoozes_summary">Stop reminding me after %1$s snoozes.</string>
    <string name="settings_max_snoozes_unlimited_summary">Never stop reminding me until I take action.</string>
    <string name="max_snoozes_unlimited">Unlimited</string>
    <string name="settings_sound_title">Alert Sound</string>
    <string name="settings_sound_summary">Current sound: %1$s</string>
    <string name="settings_sound_preview_desc">Preview sound</string>
    <string name="settings_bypass_title">Bypass Volume</string>
    <string name="settings_bypass_summary">Reminders will play even if your phone is on silent.</string>
    <string name="settings_volume_title">Alert Volume</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_theme_title">App Theme</string>
    <string name="settings_theme_summary">Switch between light, dark, or let the system decide.</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System</string>
    <string name="lang_system">System Default</string>
    <string name="settings_language_title">App Language</string>
    <string name="settings_language_summary">Select the language for the magic to happen.</string>
    <string name="settings_language_restart_warning">The app will restart to apply the new language.</string>
    <string name="lang_english">English</string>
    <string name="lang_hebrew">עברית</string>
    <string name="lang_arabic">العربية</string>
    <string name="lang_spanish">Español</string>
    <string name="lang_french">Français</string>
    <string name="lang_german">Deutsch</string>
    <string name="lang_japanese">日本語</string>
    <string name="lang_portuguese">Português (Brasil)</string>
    <string name="lang_korean">한국어</string>
    <string name="lang_hindi">हिन्दी</string>
    <string name="lang_indonesian">Bahasa Indonesia</string>
    <string name="lang_russian">Русский</string>
    <string name="settings_category_data">Data &amp; Privacy</string>
    <string name="settings_backup_title">Backup &amp; Restore</string>
    <string name="settings_backup_summary">Safe-keep your data or move it to a new device.</string>
    <string name="backup_export">Export Data</string>
    <string name="backup_import">Import Data</string>
    <string name="backup_restore_warning">Restoring a backup will delete all your current medications and history. This cannot be undone. Are you sure?</string>
    <string name="medication_delete_warning">This will permanently delete this medication and all its history. This cannot be undone. Are you sure?</string>
    <string name="settings_clear_data_title">Start Fresh</string>
    <string name="settings_clear_data_message">This will permanently delete all your medications, history, and any cloud backups. This cannot be undone. Are you sure?</string>
    <string name="settings_clear_data_message_no_cloud">This will permanently delete all your medications and history. This cannot be undone. Are you sure?</string>
    <string name="settings_clear_data_summary">Wipe all medications and history. Careful, this can\'t be undone!</string>
    <string name="settings_category_about">About</string>
    <string name="settings_version_title">App Version</string>
    <string name="settings_version_summary">You\'re currently running version %1$s</string>
    <string name="settings_support_title">Need help?</string>
    <string name="settings_support_summary">Premium support for our magical community. Have questions or found a bug?</string>
    <string name="admob_application_id_test" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_rewarded_interstitial_id_test" translatable="false">ca-app-pub-3940256099942544/5354046379</string>
    <string name="admob_rv_id_test" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_app_open_id_test" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="admob_application_id_live" translatable="false">ca-app-pub-1660518916686621~3216923293</string>
    <string name="admob_banner_id_live" translatable="false">ca-app-pub-1660518916686621/4529256539</string>
    <string name="admob_interstitial_id_live" translatable="false">ca-app-pub-1660518916686621/6074272497</string>
    <string name="admob_rv_id_live" translatable="false">ca-app-pub-1660518916686621/2745401573</string>
    <string name="admob_rewarded_interstitial_id_live" translatable="false">RInter</string>
    <string name="admob_app_open_id_live" translatable="false">ca-app-pub-1660518916686621/1831775159</string>
    <string name="take">Take</string>
    <string name="permission_rational_notification_title">Stay on Track!</string>
    <string name="permission_rational_notification_message">To help you remember your doses, I\'d love to send you a friendly nudge when it\'s time. Sound good?</string>
    <string name="button_sure">Sure</string>
    <string name="button_not_now">Not now</string>
    <string name="button_never">Never</string>
    <string name="notification_missing">No notifications permission</string>
    <string name="button_allow">Allow</string>
    <string name="button_grant">Grant</string>
    <string name="button_ok">OK</string>
    <string name="button_select">Select</string>
    <string name="button_skip">Skip</string>
    <string name="button_snooze">Snooze</string>
    <string name="button_untake">Un-take</string>
    <string name="button_unskip">Un-skip</string>
    <string name="button_take_all">Take All</string>
    <string name="button_skip_all">Skip All</string>
    <string name="button_reschedule_all">Reschedule</string>
    <string name="button_untake_all">Un-take All</string>
    <string name="button_unskip_all">Un-skip All</string>
    <string name="button_reset_all">Reset All</string>
    <string name="button_expand_all">Expand All</string>
    <string name="button_collapse_all">Collapse All</string>
    <string name="group_title_format">%1$s Reminders</string>
    <string name="group_status_taken">All marked as taken</string>
    <string name="group_status_skipped">All marked as skipped</string>
    <string name="group_status_mixed">Mixed status</string>
    <string name="sort_scheduled">Scheduled</string>
    <string name="sort_name">Name</string>
    <string name="sort_action_time">Action Time</string>
    <string name="sort_by_hint">Sort by:</string>
    <string name="fragment_add_med_title">New Medication</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="times_a_day">%1$d times a day</string>
    <string name="scheduled_at">Scheduled at: %1$s</string>
    <string name="scheduled_for_format">Scheduled for %1$s</string>
    <string name="took_format">Took %1$s %2$s at %3$s</string>
    <string name="skipped_at_format">Skipped at %1$s</string>
    <string name="no_instructions">No instructions</string>
    <string name="medication_icon_desc">Medication Icon</string>
    <string name="empty_meds_title">The Wizard is waiting!</string>
    <string name="empty_meds_subtitle">I’m ready to help you track your medications. Let’s add your first one and start the magic!</string>
    <string name="empty_meds_action">Add my first med</string>
    <string name="onboarding_btn_next">Next</string>
    <string name="onboarding_btn_skip">Skip</string>
    <string name="onboarding_btn_finish">Get Started</string>
    <string name="back_to_exit">Click back again to exit</string>
    <string name="onboarding_title_1">Meet the Wizard</string>
    <string name="onboarding_desc_1">Your personal health companion is here to help you manage your medications with a touch of magic.</string>
    <string name="onboarding_title_2">Smart Reminders</string>
    <string name="onboarding_desc_2">Never miss a dose again. We\'ll send you timely reminders that respect your sleep schedule.</string>
    <string name="onboarding_title_3">Track Your Progress</string>
    <string name="onboarding_desc_3">Keep a detailed history of your health journey. It’s perfect for sharing with your healthcare provider.</string>
    <string name="onboarding_terms_agree"><![CDATA[I agree to the <a href="%1$s">Terms of Use</a> and <a href="%2$s">Privacy Policy</a>]]></string>
    <string name="onboarding_error_terms">Please agree to the Terms and Privacy Policy to continue the magic.</string>
    <string name="url_terms">https://wisemedicalapps.com/terms-of-use/index.html</string>
    <string name="cheats_title">Developer Cheats</string>
    <string name="cheats_is_premium">Is Premium</string>
    <string name="cheats_show_ads">Show Ads (Force)</string>
    <string name="cheats_apply_restart">Apply &amp; Restart</string>
    <string name="button_restore">Restore</string>
    <string name="button_sign_in">Sign In</string>
    <string name="cloud_backup_title">Cloud Backup</string>
    <string name="cloud_backup_sign_in_hint">Back up your data to Google Drive</string>
    <string name="cloud_backup_sign_out">Sign Out</string>
    <string name="cloud_backup_auto_title">Auto Cloud Backup</string>
    <string name="cloud_backup_auto_summary">Sync data automatically to Google Drive</string>
    <string name="cloud_backup_wifi_title">Backup on Wi-Fi only</string>
    <string name="cloud_backup_wifi_summary">Save mobile data</string>
    <string name="cloud_backup_now">Backup to Cloud Now</string>
    <string name="feature_active_label">Active</string>
</resources>