<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.robinzon.medicationwizard.ui.todaysmedications.TodaysMedicationsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_todays_medications" />

    <fragment
        android:id="@+id/nav_medications_list"
        android:name="com.robinzon.medicationwizard.ui.medicationslist.MedicationsListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_medications_list" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.robinzon.medicationwizard.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.robinzon.medicationwizard.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>